# python_project_template

./: .coveragerc  LICENSE  Readme.md  pyproject.toml  setup.cfg  tox.ini
tests/: test_order.py
tradingbot/: order.py
