[metadata]
name = tradingbot
description = fancy trading bot!
author = Zzz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    tradingbot
install_requires =
    requests>=2
python_requires = >=3.6
# In case source code is in a differen path other than root.
# package_dir =
#     = tradingbot
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tradingbot = py.typed

[flake8]
ignore = E501,F405,F403
exclude = tests/*,docs/*,*.md,__init__.py